<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.argouml</groupId>
    <artifactId>argouml-core</artifactId>
    <version>0.35.2-SNAPSHOT</version>
    <relativePath>../../pom.xml</relativePath>
  </parent>

  <artifactId>argouml</artifactId>

  <properties>
    <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
    <site.path>${project.artifactId}</site.path>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.argouml</groupId>
      <artifactId>argouml-model</artifactId>
      <version>${project.version}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.tigris.gef</groupId>
      <artifactId>gef</artifactId>
      <version>0.13.7</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.0.2-6</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>batik-dom</artifactId>
      <version>1.18</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>batik-util</artifactId>
      <version>1.14</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>batik-ext</artifactId>
      <version>1.14</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>batik-svggen</artifactId>
      <version>1.14</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>batik-awt-util</artifactId>
      <version>1.14</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.tigris.swidgets</groupId>
      <artifactId>swidgets</artifactId>
      <version>0.1.4-5</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.tigris.toolbar</groupId>
      <artifactId>toolbar</artifactId>
      <version>1.4.1-20071227-1</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>tudresden.ocl</groupId>
      <artifactId>ocl-argo</artifactId>
      <version>1.1-5</version>
      <scope>compile</scope>
    </dependency>

    <!-- MDR things -->
    <dependency>
      <groupId>org.argouml</groupId>
      <artifactId>argouml-mdr</artifactId>
      <version>${project.version}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.argouml</groupId>
      <artifactId>java-interfaces</artifactId>
      <version>0.34</version>
      <type>jar</type>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>jmi</groupId>
      <artifactId>jmi</artifactId>
      <version>1.0-5</version>
      <type>jar</type>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>jmi</groupId>
      <artifactId>mof</artifactId>
      <version>0.0-5</version>
      <type>jar</type>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.netbeans.mdr</groupId>
      <artifactId>jmiutils</artifactId>
      <version>0.0-5</version>
      <type>jar</type>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.netbeans.mdr</groupId>
      <artifactId>mdrapi</artifactId>
      <version>0.0-5</version>
      <type>jar</type>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.netbeans.mdr</groupId>
      <artifactId>openide-util</artifactId>
      <version>0.0-5</version>
      <type>jar</type>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.netbeans.mdr</groupId>
      <artifactId>nbmdr</artifactId>
      <version>0.0-5</version>
      <type>jar</type>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>net.sourceforge.saxon</groupId>
      <artifactId>saxon</artifactId>
      <version>9.1.0.8</version>
      <type>jar</type>
      <scope>runtime</scope>
    </dependency>

    <!-- Other test stuff -->
    <dependency>
      <groupId>easymock</groupId>
      <artifactId>easymock</artifactId>
    </dependency>
    <dependency>
      <groupId>jdepend</groupId>
      <artifactId>jdepend</artifactId>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
    </dependency>
    <dependency>
    	<groupId>org.argouml</groupId>
    	<artifactId>testmodels</artifactId>
    	<version>0.35.2-SNAPSHOT</version>
    	<scope>test</scope>
    </dependency>
  </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <name>argouml-app</name>
  <description>
This is the project containing most of the application or
the parts of the application that are not (yet) moved into their
own projects.
  </description>

  <scm>
    <url>${github.site.org}/${github.site.repositoryName}/tree/master/src/argouml-app</url>
    <connection>scm:git:${github.site.org}/${github.site.repositoryName}.git</connection>
    <developerConnection>scm:git:${gerrithub.site.org.ssh}/${github.site.repositoryName}.git</developerConnection>
  </scm>

</project>
